# customer-notifications

./: .env  Dockerfile  README.md  app.py  docker-compose.yml  nginx.conf  pyproject.toml
app/: __init__.py  app.py
app/adapters/: celery_broker_adapter.py  http_response_adapter.py  mongodb_adapter.py  notification_processor_adapter.py
app/adapters/http/: http_response_adapter.py
app/adapters/processor/: notification_processor_adapter.py
app/adapters/queue/: celery_broker_adapter.py  celery_consumer.py
app/adapters/repository/: mongodb_notification_adapter.py  user_mongodb_adapter.py
app/adapters/strategy/: email_notification_adapter.py  notification_strategies.py  push_notification_strategy.py  sms_notification_adapter.py  web_notification_strategy.py
app/domain/entities/: notification.py
app/domain/errors/: api_exception.py  bad_request.py  error_handler.py
app/domain/http/: status_code.py
app/infrastructure/server/: entrypoint.py  url_mapping.py
app/ports/: message_broker.py  notification_repository.py  notifications_strategy.py  user_repository.py
app/presentation/controllers/: notifications.py  notifications_ctr.py  ping_ctr.py
app/presentation/models/: notifications_body.py
app/presentation/schemas/: notifications.py
app/presentation/validation/: notification_validator.py
db/: seed.js
tests/application/adapters/http/: test_http_response_adapter.py
tests/application/adapters/processor/: test_notification_processor_adapter.py
tests/application/adapters/strategy/: test_web_notification_strategy.py
(+3 files in other folders)
