[tool.poetry]
name = "customer-notifications"
version = "0.1.0"
description = "API to send notifications to customers"
authors = ["Luiz Cruz <luizcruzdev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.0"
pymongo = "^4.6.1"
loguru = "^0.7.2"
celery = "^5.3.6"
marshmallow = "^3.20.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
